chore: version number fixes

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "smartnowx/google-maps",
     "description": "Description",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Author",
