--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "smartnowx/google-maps",
-    "description": "Description",
-    "version": "1.0.0",
+    "description": "Google Maps plugin for HorizontCMS",
+    "version": "4.3.0",
     "authors": [
         {
             "name": "Author",
